[package]
name = "openmina-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
thiserror = { version = "1.0" }
log = { version = "0.4.20" }
env_logger = { version = "0.10.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }

bs58 = { version = "0.5.0", features = ["check"] }
rand = { version = "0.8.5" }

rocksdb = { version = "0.21" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "webrtc-v0.51.3", default-features = false, features = ["macros", "tokio", "gossipsub", "tcp", "noise", "pnet", "yamux", "dns"] }
vru-cancel = { version = "0.1.2" }

binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "e989a8957db0bde6007a8aceb39db409a9b0a308" }
libp2p-rpc-behaviour = { git = "https://github.com/vlad9486/openmina-poc", branch = "docker" }
mina-transport = { git = "https://github.com/vlad9486/openmina-poc", branch = "docker" }
mina-tree = { git = "https://github.com/openmina/ledger", branch = "rampup4" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }

warp = { version = "0.3.5" }

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
# ark-ff = { path = "/home/sebastien/github/algebra/ff" }
# ark-ec = { path = "/home/sebastien/github/algebra/ec" }
# ark-poly = { path = "/home/sebastien/github/algebra/poly" }
# ark-serialize = { path = "/home/sebastien/github/algebra/serialize" }

[patch.'https://github.com/o1-labs/proof-systems']
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}
poly-commitment = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}

# mina-hasher = { path = "/home/sebastien/github/proof-systems/hasher" }
# mina-signer = { path = "/home/sebastien/github/proof-systems/signer" }
# mina-curves = { path = "/home/sebastien/github/proof-systems/curves" }
# o1-utils = { path = "/home/sebastien/github/proof-systems/utils" }
# kimchi = { path = "/home/sebastien/github/proof-systems/kimchi" }
# oracle = { path = "/home/sebastien/github/proof-systems/oracle" }
