[workspace]
members = [".", "tester"]

[workspace.dependencies]
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "3b697ae" }
mina-tree = { git = "https://github.com/openmina/ledger", rev = "d18603502b9da6de84d94aee817ce1bb28cfe129" }
mina-transport = { git = "https://github.com/vlad9486/openmina-poc", rev = "d491559" }
libp2p-rpc-behaviour = { git = "https://github.com/vlad9486/openmina-poc", rev = "d491559" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }

[package]
name = "openmina-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
thiserror = { version = "1.0" }
log = { version = "0.4.20" }
env_logger = { version = "0.10.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }

bs58 = { version = "0.5.0", features = ["check"] }
rand = { version = "0.8.5" }

rocksdb = { version = "0.21" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "webrtc-v0.51.3", default-features = false, features = ["macros", "tokio", "gossipsub", "tcp", "noise", "pnet", "yamux", "dns"] }
vru-cancel = { version = "0.1.2" }

mina-p2p-messages = { workspace = true }
mina-tree = { workspace = true }
mina-transport = { workspace = true }
libp2p-rpc-behaviour = { workspace = true }
mina-signer = { workspace = true }

warp = { version = "0.3.5" }

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }

[patch.'https://github.com/o1-labs/proof-systems']
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}
poly-commitment = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}
