[package]
name = "openmina-archive-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0" }
structopt = { version = "0.3.26" }
log = { version = "0.4.20" }
env_logger = { version = "0.10.0" }

serde_json = { version = "1.0" }
reqwest = { version = "0.11.20", features = ["blocking"] }
bytes = { version = "1.5" }

mina-p2p-messages = { workspace = true }
mina-tree = { workspace = true }
mina-signer = { workspace = true }
